--- a/player/templates/strim.html
+++ b/player/templates/strim.html
@@ -1,102 +1,9 @@
-{% extends "layout.html" %}
-{% load sorting_tags %}
-       {% load pagination_tags %}
-
-{% block title%}
-strimsplayer.pl
+{% extends "index.html" %}
+{% block hero-unit %}
 {% endblock %}
-
-{% block body %}
-
-
-      <div class='main'>
-        <div class="hero-unit">
-         <h1>Strimsplayer.</h1>
-            <p>Player dla strimsa.</p>
-            <p><a href="http://strims.pl/" class="btn btn-primary btn-large">Dowiedz się więcej</a></p>
-          </div>
-          <h2>Ostatnio dodane piosenki do {{ strimname }}</h2>
-          <p> Sortowanie  
-{% anchor date Data %}
-{% anchor votes Upvotes %}
-</p>
-<div class="span5">
-<div class="player">
-        <div class="youtube-player-video">
-                <div class="youtube-player-object">
-                        You need Flash player 8+ and JavaScript enabled.
-                </div>
-        </div>
-</div>
-</div>
-<div class="span6">
-    <div class="songsinfo">
-        {% for song in songs %}
-        <div id="{{ song.ytid }}" class="songid">
-            <div class="content_voting">
-                    <div class="content_vote_wrapper">
-                                <span class="content_vote_count">{{ song.upvotes }}</span>
-                    </div>
-                    <div class="content_vote_wrapper">
-                                <span class="content_vote_count">{{ song.downvotes }}</span>
-                    </div>
-                </div>
-                    <h2 class="songtitle">{{ song.title }}</h2>
-                <div class="content_inner">
-                    <span class="user"><a href="http://strims.pl/u/{{song.user }}">@{{ song.user }}</a></span>
-                    <span class="date">Dodane {{ song.date|date:"d.m.Y H:i:s" }}</span> do 
-                    <span class="strimname"><a href="http://strims.pl/s/{{ song.strim }}"> {{ song.strim }}</a></span>
-                        Więcej w 
-                        <span class="strimname"><a href="{% url "player.views.strim" slug=song.strim  %}"> {{ song.strim }}</a></span>
-                    <span class="strimlink"><a href="http://strims.pl/{{ song.url }}">Zobacz na strimse </a></span>
-                </div>
-                <div class="clear"></div>
-            </div>
-            {% empty %}
-                <p>Brak</p>
-            {% endfor %}
-    </div>
-</div>
-
-
-{# display navigation #}
-<div class="span9">
-    {% include "pagination.html" %}
-</div>
-
-
-      </div>
-        {% endblock %}
-{% block javascript %}
-<script type="text/javascript">
-
-
-  // Custom playlist
-        var config1 =  {
-                playlist: {
-                        title: 'Strim player',
-                        videos: [
-
-                        {% for entity in  songs  %}
-{% autoescape on %}
-{ id: '{{entity.ytid }}', title: "{{entity.title }}" },
-{% endautoescape %}
- {% empty %}
-         Brak wyników
-         {% endfor %}
-                   ]
-                }
-            , onVideoLoad: function(video){
-                    $('.songid:visible').hide('slow');
-                     $('#'+video.id).addClass('activesong').show('slow');
-
-                 }
-        };
-
-    $(".player").player(config1)
-
-</script>
-
-
+{%block title%}
+{{ strimname }} | strimsplayer.pl
 {% endblock %}
-
+{% block header %}
+<h2> Ostatnio dodane do {{ strimname}}</h2>
+    {% endblock %}
