--- a/player/templates/index.html
+++ b/player/templates/index.html
@@ -8,28 +8,20 @@ strimsplayer.pl
 
 {% block body %}
 
-
+{% block hero-unit %}
       <div class='main'>
         <div class="hero-unit">
          <h1>Strimsplayer.</h1>
             <p>Player dla strimsa.</p>
-            <p><a href="http://strims.pl/" class="btn btn-primary btn-large">Dowiedz się więcej</a></p>
+            <p><a href="http://strims.pl/s/strimsplayer" class="btn btn-primary btn-large">Dowiedz się więcej</a></p>
           </div>
-          <h2>Ostatnio dodane piosenki</h2>
+    {% endblock %}
+          {%block header %}     <h2>Ostatnio dodane  </h2>{%endblock%}
           <p> Sortowanie  
 {% anchor date Data %}
 {% anchor votes Upvotes %}
 </p>
-<div class="span5">
-<div class="player">
-        <div class="youtube-player-video">
-                <div class="youtube-player-object">
-                        You need Flash player 8+ and JavaScript enabled.
-                </div>
-        </div>
-</div>
-</div>
-<div class="span6">
+<div class="span9">
     <div class="songsinfo">
         {% for song in songs %}
         <div id="{{ song.ytid }}" class="songid">
@@ -44,10 +36,10 @@ strimsplayer.pl
                     <h2 class="songtitle">{{ song.title }}</h2>
                 <div class="content_inner">
                     <span class="user"><a href="http://strims.pl/u/{{song.user }}">@{{ song.user }}</a></span>
-                    <span class="date">Dodane {{ song.date|date:"d.m.Y H:i:s" }}</span> do 
-                    <span class="strimname"><a href="http://strims.pl/s/{{ song.strim }}"> {{ song.strim }}</a></span>
-                        Więcej w 
-                        <span class="strimname"><a href="{% url "player.views.strim" slug=song.strim  %}"> {{ song.strim }}</a></span>
+                    <span class="date">Dodane  {{ song.date|date:"d.m.Y H:i:s" }}</span> do strim
+                    <span class="strimname"><a href="http://strims.pl/s/{{ song.strim }}"> {{ song.strim }}</a>.</span>
+                        Więcej z 
+                        <span class="strimname"><a href="{% url "player.views.strim" slug=song.strim  %}"> {{ song.strim }}</a></span><br/>
                     <span class="strimlink"><a href="http://strims.pl/{{ song.url }}">Zobacz na strimse </a></span>
                 </div>
                 <div class="clear"></div>
@@ -55,7 +47,21 @@ strimsplayer.pl
             {% empty %}
                 <p>Brak</p>
             {% endfor %}
+        </div>
+</div>
+
+<div class="span5">
+    <div class="player">
+            <div class="youtube-player-video">
+                    <div class="youtube-player-object">
+                            You need Flash player 8+ and JavaScript enabled.
+                    </div>
+            </div>
     </div>
+</div>
+<div class="span6">
+        <div id="playlist"></div>
+
 </div>
 
 
@@ -71,17 +77,20 @@ strimsplayer.pl
 {% block javascript %}
 <script type="text/javascript">
 
-
+    
+    {% if strimname %}
+    var addtitle =  '| '+'{{ strimname }}' + ' | ';
+    {% else %}
+    var addtitle = '|';
+    {% endif %}
   // Custom playlist
-        var config1 =  {
+    var config1 =  {
+                playlistAppendTo: '#playlist',
                 playlist: {
                         title: 'Strim player',
                         videos: [
-
                         {% for entity in  songs  %}
-{% autoescape on %}
-{ id: '{{entity.ytid }}', title: "{{entity.title }}" },
-{% endautoescape %}
+{% autoescape on %}{ id: '{{entity.ytid }}', title: "{{entity.title }}" },{% endautoescape %}
  {% empty %}
          Brak wyników
          {% endfor %}
@@ -89,11 +98,16 @@ strimsplayer.pl
                 }
             , onVideoLoad: function(video){
                     $('.songid:visible').hide('slow');
-                     $('#'+video.id).addClass('activesong').show('slow');
+                    $('#'+video.id).addClass('activesong').show('slow');
 
-                 }
-        };
-
+            }
+        , onVideoPlay: function(video){
+                    $(document).attr('title', "\u25B6 "+video.title +" "+addtitle+"  strimsplayer.pl");
+        },
+         onVideoPaused: function(video){
+                    $(document).attr('title', video.title +" "+addtitle+"  strimsplayer.pl");
+        }
+    };
     $(".player").player(config1)
 
 </script>
